tests/Checker/everything/errors/22a.sol
======= The VC compiler =======

Pass 1: Lexical and syntactic Analysis
Pass 2: Semantic Analysis
ERROR: 0(0)..0(0): *22: while conditional is not boolean
Compilation was unsuccessful.
